feat(wiki-mcp): 관리 메모리 게이지 + 워크스페이스 초기화 UX + 버그 수정
- 대시보드 시스템 리소스 패널: JVM 힙 → 관리 메모리
  OSHI RSS 합산(백그라운드 collect), 2초 Timeline에서 refreshTrackedPids() 호출
- wiki_ingest 파라미터 재설계: title/content/desc/tags + YAML frontmatter 스테이징
- AGENTS.md 번들링 3중 보장: WikiWorkspaceInitializer·server.py·wiki-mcp.yml
- 워크스페이스 초기화 UX: WikiBrowserDialog·WikiQueryDialog·SettingsDialog
- WikiQueryDialog·WikiIngestDialog 워크스페이스 찾기 버튼 제거
- onUninstall() 실행 중 제거 시 stop() 먼저 호출 (PID 잔류 버그 수정)
- WebView IllegalAccessError: --add-opens javafx.graphics/com.sun.javafx.sg.prism 추가
- CLAUDE.md 빌드 상태 최신화

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>